Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28531

Opening file dialog freezes Creator for about 10 seconds and outputs asserts

XMLWordPrintable

    • 21ef25a0f (master), 2d491591e (9.0)

      Opening any file dialog, e.g. File | Open File or Project... freezes Creator for about 10 seconds. It also prints the following asserts:

      SOFT ASSERT [09:57:16.246]: "contents && m_tempStorage->write(*contents) >= 0" in /home/jarek/dev/creator-9/src/libs/utils/fsengine/fsengine_impl.cpp:65
      SOFT ASSERT [09:57:16.290]: "contents && m_tempStorage->write(*contents) >= 0" in /home/jarek/dev/creator-9/src/libs/utils/fsengine/fsengine_impl.cpp:65
      SOFT ASSERT [09:57:26.352]: "state() == QProcess::Running" in /home/jarek/dev/creator-9/src/libs/utils/qtcprocess.cpp:1510
      qtc.utils.deviceshell: Timeout while trying to check for "cat"
      SOFT ASSERT [09:57:26.353]: "m_shell" in /home/jarek/dev/creator-9/src/plugins/remotelinux/linuxdevice.cpp:857
      SOFT ASSERT [09:57:36.376]: "state() == QProcess::Running" in /home/jarek/dev/creator-9/src/libs/utils/qtcprocess.cpp:1510
      qtc.utils.deviceshell: Timeout while trying to check for "cat"
      SOFT ASSERT [09:57:36.376]: "m_shell" in /home/jarek/dev/creator-9/src/plugins/remotelinux/linuxdevice.cpp:857
      SOFT ASSERT [09:57:36.377]: "access" in /home/jarek/dev/creator-9/src/libs/utils/filepath.cpp:825
      SOFT ASSERT [09:57:36.377]: "false" in /home/jarek/dev/creator-9/src/libs/utils/devicefileaccess.cpp:117
      

        For Gerrit Dashboard: QTCREATORBUG-28531
        # Subject Branch Project Status CR V

            madwinter Marcus Tillmanns
            jkobus Jarek Kobus
            Votes:
            3 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes