WIP: Don't freeze Creator on startup

When having remote devices configured but disconnected.

Reverts 067d02f82dc18441a2d7f6dc455e435b3c7b543b

Task-number: QTCREATORBUG-28531
Change-Id: Ied541a36e8d52b803334afe485e29d7cdcdcf7c3